fixed weird header spacing

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h3 {
 	font-size: 40px;
 	/*font-weight: 600;*/
 	padding: 10px 3%;
+	width: 100%
 	/*padding-left: 15%*/
 }
 
